# EinBier

./: 404.html  CMakeLists.txt  README  README.md  Requirements.txt  index.html  skelet
cmake-modules/: ResolveCompilerPaths.cmake
src/: Bert.cpp  CMakeLists.txt  EinBier.cpp  testBier.cpp  testBierOp.cpp  testMatrix.cpp  testNode.cpp  testTrace.cpp
src/BIO/: BIO.cpp  BIOUtils.cpp  CMakeLists.txt
src/BIO/BIO/: BIO.h  BIOUtils.h
src/Barman/: Barman.cpp  Bier.cpp  CMakeLists.txt
src/Barman/Barman/: Barman.h  Bier.h
src/Common/: CMakeLists.txt  Message.cpp
src/Common/Common/: Message.h  Shape.h  Type.h
src/Core/: BIO.cpp  Barman.cpp  CMakeLists.txt  Matrix.cpp  Operator.cpp  OperatorHandler.cpp  OperatorUtils.cpp
src/Core/Core/: BIO.h  Barman.h  Matrix.h  Node.h  Operator.h  OperatorHandler.h  OperatorUtils.h
src/FunctionSpace/: CMakeLists.txt  FunctionSpace.cpp
src/FunctionSpace/FunctionSpace/: FunctionSpace.h
src/Geometry/: CMakeLists.txt  Circle.cpp  Ellipse.cpp  Geometry.cpp
src/Geometry/Geometry/: Circle.h  Ellipse.h  Geometry.h
src/Matrix/: CMakeLists.txt  Matrix.cpp
src/Matrix/Matrix/: Matrix.h
src/Method/: Method.cpp
src/Method/Method/: Method_ENUM.h
src/Operator/: Barman.cpp  BierOperator.cpp  CMakeLists.txt  CoreOperator.cpp  Operator.cpp
src/Operator/Operator/: Barman.h  BierOperator.h  CoreOperator.h  Operator.h
src/Trace/: CMakeLists.txt  Trace.cpp  VectorTrace.cpp
src/Trace/Trace/: Trace.h  VectorTrace.h
